# GENOME

./: .gitignore  README.md  pyproject.toml
datas/drop/: drop_v0_train.jsonl
scripts/: expert_fusion.sh  genome.sh  genomeplus.sh
src/genome/: __init__.py
