[project]
name = "genome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1",
    "lightning>=2.5.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "nevergrad>=1.0.8",
    "nltk>=3.9.1",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "peft>=0.15.0",
    "scikit-learn>=1.6.1",
    "transformers>=4.49.0",
    "vllm>=0.8.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
